# claim_checker

./: README.md  init.sh  pyproject.toml  requirements.txt  run_claim_checker.sh
.github/: dependabot.yml
claim_checker/: __main__.py  cli.py  config.py  core.py
claim_checker/analyzer/: analyzer.py
claim_checker/detector/: detector.py
claim_checker/languages/uk/: __init__.py  loader.py
claim_checker/languages/uk/dictionaries/: emotional_words.txt  hedges.txt  intensifiers.txt  logical_patterns.txt
claim_checker/logic_gates/: pipeline.py
claim_checker/reporter/: reporter.py
config/: config.yaml
config/languages/uk/: config.yaml
config/rules/: logical_fallacies.yaml
data/test_corpus/: sample.txt
tests/: test_analyzer.py  test_uk_resources.py
