[project]
name = "claim-checker"
version = "0.1.0"
description = "Text analysis tool that identifies potential issues with logic, bias, and factual accuracy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "spacy>=3.7.0",
    "nltk>=3.8.1",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pytest>=7.4.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
    "langdetect>=1.0.9",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.287",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[project.scripts]
claim-checker = "claim_checker.cli:app"