[project]
name = "claim_checker"
version = "0.1.0"
description = "Text analysis tool that identifies potential issues with logic, bias, and factual accuracy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "spacy",
    "nltk",
    "pyyaml",
    "pydantic",
    "typer",
    "fastapi",
    "uvicorn",
    "pytest",
    "matplotlib",
    "networkx",
    "langdetect",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
    "pytest-cov",
    "types-pyyaml>=6.0.12.20250402",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[project.scripts]
claim_checker = "claim_checker.cli:app"
